--- a/Frontend/pom.xml
+++ b/Frontend/pom.xml
@@ -14,6 +14,11 @@
 	</properties>
 		
 	<dependencies>
+	<dependency>
+	<groupId>com.niit</groupId>
+  <artifactId>Backend</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
+	</dependency>
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
@@ -29,7 +34,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
