--- a/Frontend/pom.xml
+++ b/Frontend/pom.xml
@@ -49,6 +49,24 @@
     <artifactId>spring-webmvc</artifactId>
     <version>${spring.version}</version>
 </dependency>
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-config</artifactId>
+    <version>5.1.2.RELEASE</version>
+</dependency>
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-web</artifactId>
+    <version>5.1.2.RELEASE</version>
+</dependency>
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-taglibs</artifactId>
+    <version>5.1.2.RELEASE</version>
+</dependency>
+
+
+
 		
 	</dependencies>
 	<build>
