--- a/Frontend/pom.xml
+++ b/Frontend/pom.xml
@@ -41,7 +41,13 @@
 <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-core</artifactId>
-    <version>${spring.version}</version>   
+    <version>${spring.version}</version>
+    <exclusions>
+				<exclusion>
+					<groupId>commons-logging</groupId>
+					<artifactId>commons-logging</artifactId>
+				</exclusion>
+			</exclusions>   
 </dependency>
 
 <dependency>
@@ -52,17 +58,17 @@
 <dependency>
     <groupId>org.springframework.security</groupId>
     <artifactId>spring-security-config</artifactId>
-    <version>5.1.2.RELEASE</version>
+    <version>4.2.2.RELEASE</version>
 </dependency>
 <dependency>
     <groupId>org.springframework.security</groupId>
     <artifactId>spring-security-web</artifactId>
-    <version>5.1.2.RELEASE</version>
+    <version>4.2.2.RELEASE</version>
 </dependency>
 <dependency>
     <groupId>org.springframework.security</groupId>
     <artifactId>spring-security-taglibs</artifactId>
-    <version>5.1.2.RELEASE</version>
+    <version>4.2.2.RELEASE</version>
 </dependency>
 
 
